assets/styles.css
*{
    padding: 0;
    margin: 0;
}

header{
    background-color: #DDA15E;
}
p{
    font-family: 'Poppins', sans-serif;
}

figcaption{
    font-family: "Lobster two", serif;
}

li a{
    font-size: 30px;
    font-family: "Lora", serif;
    font-weight: 400;
    font-style: normal;
    color: #FEFAE0;
    text-decoration: none;
    padding: 5px;
}

#contact_me, .intro_message a{
    font-family: "Lobster", serif;
    font-weight: 400;
    font-style: normal;
    background-color: #AFEEEE;  
    color: #283618;
    border-radius: 20px; 
    padding: 12px;
}

.intro_message a{
    text-decoration: none;
}

nav ul{
    display: flex;
    justify-content: flex-end;
    list-style: none;
    margin-bottom: 0;
}

nav ul li{
    margin: 0 10px;
    padding: 20px;

}

h1{
    font-family: "Poppins", serif;
    font-weight: 400;
    font-style: normal;
    color: #FEFAE0;
    text-align: center;
    padding: 20px;
    font-size: 45px;
}

h2{
    text-align: center;
    font-family: 'Poppins', sans-serif;
    color: #DDA15E;
    font-size: 30px;
}

#Home{
    background-color: #606C38;
    overflow: hidden;
}

#Home figcaption{
    clear: left;
    text-align: center;
    width: 70%;
}

img{
    object-fit: cover;
    border-radius: 35px;
}

#intro_img{
    float: left;
    width: 360px;
    height: 353px;
    margin-left: 25%;
    margin-right: 10px;
}

#intro_earth{
    padding-top: 40px;
    width: 85%;
    font-size: 25px;
}

#intro_button{
    margin: 0 40%;
}
#my_img{
    float: right;
    height: 200px;
}
.intro_message{
    clear: left;
    float: right;
    margin-top: 80px;
}

.intro_message p {
    margin-bottom: 20px;
}

footer{
    display: flex;
    justify-content: space-between;
    background-color: #DDA15E;
}

footer img{
    width: 80px;
    height: 80px;
    margin: 10px;
}

footer ul {
    display: flex;
    justify-content: center;
    list-style: none;
    justify-content: flex-end;
}

.copyright_logo{
    display: flex;
    align-items: center;
}

.rows{
    display: flex;
    justify-content: center;
    gap: 30px;
}

.rows img{
    width: 200px;
    height: 200px;
    padding: 5px;
    float: left;
    border: 3px solid #AFEEEE;
    margin: 0 5px;
}

.rows figcaption{
    clear: left;
    width: 50%;
    text-align: center;
    margin-top: 5px;
}

.rows figure{
    width: 450px;
    margin: 10px;
}
.rows p{
    padding-top: 50px;
}

.photo_section{
    background-color: #FEFAE0;
}

.section_carousel{
    background-color: #FEFAE0;
    margin-bottom: 30px;
    padding-bottom: 20px;
}

.carousel-control-prev-icon, .carousel-control-next-icon{
    background-color: orange;
}

